addons/grafana/resources/forwading-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-nginx-forwarding-alb"
  namespace: "ingress-nginx"
  labels:
    app: "ingress-nginx-forwarding-alb"
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/target-type: "instance"
    alb.ingress.kubernetes.io/subnets: "subnet-0584e364bfbf69956,subnet-0419292d4a68d30cc,subnet-0e2e7ecbfdd91f1fb"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200,404"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "ingress-nginx-controller"
            port:
              number: 80
